src/css/Panel.css
.theme {
  position: absolute;
  flex: 1;
  color: whitesmoke;
  text-align: center;
  bottom: 15%;
}

.panel {
  flex: 1;
  box-shadow: inset 0 0 0 3px rgba(255, 255, 255, 0.3);
  cursor: pointer;

  display: flex;
  justify-content: center;
  align-items: center;

  /* Image */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;

  transition: 1s;
}

.panel:hover .theme {
  zoom: 150%;
  background-color: rgb(74, 75, 75, 0.4);
  padding: 15px;
  transition: 0.5s;
}

/* Selected Full Screen Image */

.panel.selected {
  flex: 10;
  background-position: center;
  background-repeat: no-repeat;
}

.panel.hidden {
  flex: 0;
}

.positive-affirmation {
  background-color: rgb(74, 75, 75, 0.4);
  padding: 10px;
  border-style: groove;
  width: 75vh;

  /* Text */
  color: whitesmoke;
  font-size: 40px;
  font-weight: bold;
  text-align: center;

  /* Centering element */
  position: absolute;
  bottom: 15%;
  left: calc(50% - 37.5vh);
}

/* Handling fading in of positive affirmation */
.fade-in {
  animation: fadeIn ease 5s;
  -webkit-animation: fadeIn ease 5s;
  -moz-animation: fadeIn ease 5s;
  -o-animation: fadeIn ease 5s;
  -ms-animation: fadeIn ease 5s;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-moz-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-o-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-ms-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

